grammar.txt
SourceFile = { FunctionDef } .

FunctionDef = "fn" identifier FunctionSignature FunctionBody .
FunctionSignature = "(" [ ParameterList ] ")" [ Result ] .
ParameterList = Parameter { "," Parameter }
Parameter = [ identifier ] ":" Type
Result = ":" Type

FunctionBody = Block .
Block = "{" StatementList "}" .
StatementList = { Statement ";" } .
Statement = VarDecl .
VarDecl = "var" identifier ":" Type "=" Expression .
Expression = UnaryExpression .
UnaryExpression = PrimaryExpression .
PrimaryExpression = Operand .
Operand = Literal | identifier .
Literal = primitive .

Type = "int" .

primitive = integer .
integer = decimal_digit { decimal_digit } .
identifier = letter { letter } .
letter = "a" ... "z" | "A" ... "Z" | decimal_digit

decimal_digit = "0" ... "9"
